# build_tests-cmake-var_ROCK_PUBLIC_CXX_STANDARD

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
